stop overflow of display

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 }
 
 #display{
+    overflow: hidden;
     display: flex;
     justify-content: flex-end;
     font-size: 60px;
